Mise à jour des liens d'images dans le portfolio

--- a/pages/enseeiht.html
+++ b/pages/enseeiht.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="language-selector">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images/fr.png" alt="Français" class="language-btn" data-lang="fr">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images/en.png" alt="English" class="language-btn" data-lang="en">
+        <img src="../images/fr.png" alt="Français" class="language-btn" data-lang="fr">
+        <img src="../images/en.png" alt="English" class="language-btn" data-lang="en">
     </div>
 
     <nav>
@@ -57,15 +57,13 @@
                                 </ul>
                             </div>
                             <div class="hydraulic-grid">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig1.png" alt="Simulation volumes finis 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig2.png" alt="Simulation volumes finis 1">
-
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig3.png" alt="Simulation volumes finis 1">
-
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig4.png" alt="Simulation volumes finis 2">
+                                <img src="../images/fig1.png" alt="Simulation volumes finis 1">
+                                <img src="../images/fig2.png" alt="Simulation volumes finis 1">
+                                <img src="../images/fig3.png" alt="Simulation volumes finis 1">
+                                <img src="../images/fig4.png" alt="Simulation volumes finis 2">
                             </div>
                             <div class="project-links">
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/Tran_Jane.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/Tran_Jane.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport Volumes finies
                                 </a>
                             </div>
@@ -83,21 +81,19 @@
                                 </ul>
                             </div>
                             <div class="hydraulic-grid">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig5.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig6.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig7.png" alt="Simulation Fluent 1">
-
-          
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig8.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig5.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig6.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig7.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig8.png" alt="Simulation Fluent 1">
                             </div>
                             <div class="project-links">
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/FLUENT_TDM1.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/FLUENT_TDM1.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport : Ecoulement laminaire en conduite
                                 </a>
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/FLUENT_TDM2.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/FLUENT_TDM2.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport : Couche limite laminaire
                                 </a>
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/FLUENT_TDM3.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/FLUENT_TDM3.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport : Ecoulement autour d'un profil d'aile
                                 </a>
                             </div>
@@ -115,15 +111,13 @@
                                 </ul>
                             </div>
                             <div class="hydraulic-grid">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig9.png" alt="Simulation Fluent 1">
-
-
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig10.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig11.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig12.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig9.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig10.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig11.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig12.png" alt="Simulation Fluent 1">
                             </div>
                             <div class="project-links">
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/E8_rapFinal.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/E8_rapFinal.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport APP Hydraulique
                                 </a>
                             </div>
@@ -141,15 +135,13 @@
                                 </ul>
                             </div>
                             <div class="hydraulic-grid">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig13.png" alt="Simulation Fluent 1">
-
-
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig14.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig15.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig16.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig13.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig14.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig15.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig16.png" alt="Simulation Fluent 1">
                             </div>
                             <div class="project-links">
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/TP-Ressauts-Hydrauliques.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/TP-Ressauts-Hydrauliques.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport de TP Ressauts Hydrauliques
                                 </a>
                             </div>
@@ -167,14 +159,12 @@
                                 </ul>
                             </div>
                             <div class="hydraulic-grid">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig17.png" alt="Simulation Fluent 1">
-
-
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig18.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig19.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig17.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig18.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig19.png" alt="Simulation Fluent 1">
                             </div>
                             <div class="project-links">
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/Optimisation.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/Optimisation.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport TDM Optimisation
                                 </a>
                             </div>
@@ -192,14 +182,12 @@
                                 </ul>
                             </div>
                             <div class="hydraulic-grid">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig20.png" alt="Simulation Fluent 1">
-
-
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig21.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig22.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig20.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig21.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig22.png" alt="Simulation Fluent 1">
                             </div>
                             <div class="project-links">
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/be_stat.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/be_stat.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport BE de statistiques
                                 </a>
                             </div>
@@ -217,14 +205,12 @@
                                 </ul>
                             </div>
                             <div class="hydraulic-grid">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig23.png" alt="Simulation Fluent 1">
-
-
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig24.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig25.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig23.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig24.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig25.png" alt="Simulation Fluent 1">
                             </div>
                             <div class="project-links">
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/exten.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/exten.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport de TP Extensiométrie
                                 </a>
                             </div>
@@ -242,14 +228,12 @@
                                 </ul>
                             </div>
                             <div class="hydraulic-grid">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig26.png" alt="Simulation Fluent 1">
-
-
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig27.png" alt="Simulation Fluent 1">
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig28.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig26.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig27.png" alt="Simulation Fluent 1">
+                                <img src="../images/fig28.png" alt="Simulation Fluent 1">
                             </div>
                             <div class="project-links">
-                                <a href="/Users/utilisateur/Desktop/cursor_ia/images/thermo.pdf" target="_blank" class="pdf-link">
+                                <a href="../images/thermo.pdf" target="_blank" class="pdf-link">
                                     <i class="fas fa-file-pdf"></i> Rapport de BE Thermodynamique
                                 </a>
                             </div>
