--- a/pages/enseeiht2.html
+++ b/pages/enseeiht2.html
@@ -10,8 +10,8 @@
 </head>
 <body>
     <div class="language-selector">
-        <img src="../images1/fr.png" alt="Français" class="language-btn" data-lang="fr">
-        <img src="../images1/en.png" alt="English" class="language-btn" data-lang="en">
+        <img src="../images/fr.png" alt="Français" class="language-btn" data-lang="fr">
+        <img src="../images/en.png" alt="English" class="language-btn" data-lang="en">
     </div>
 
     <nav>
