--- a/pages/experience-perso.html
+++ b/pages/experience-perso.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div class="language-selector">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images2/fr.png" alt="Français" class="language-btn" data-lang="fr">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images1/en.png" alt="English" class="language-btn" data-lang="en">
+        <img src="../images/fr.png" alt="Français" class="language-btn" data-lang="fr">
+        <img src="../images/en.png" alt="English" class="language-btn" data-lang="en">
     </div>
 
     <nav>
@@ -128,7 +128,7 @@
                         <div class="experience-card" onclick="window.location.href='projet-surf.html'">
                             <div class="card-header">
                                 <h3 data-translate="surf-title">Stage de perfectionnement  sportif en Australie</h3>
-                                <img src="../images1/bbsc.png" alt="Logo Surf" class="company-logo">
+                                <img src="../images/bbsc.png" alt="Logo Surf" class="company-logo">
                             </div>
                             <div class="card-body">
                                 <div class="position">
