--- a/pages/experience-pro.html
+++ b/pages/experience-pro.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div class="language-selector">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images/fr.png" alt="Français" class="language-btn" data-lang="fr">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images/en.png" alt="English" class="language-btn" data-lang="en">
+        <img src="../images/fr.png" alt="Français" class="language-btn" data-lang="fr">
+        <img src="../images/en.png" alt="English" class="language-btn" data-lang="en">
     </div>
 
     <nav>
@@ -45,7 +45,7 @@
                         <div class="experience-card" onclick="window.location.href='projet-albedo.html'">
                             <div class="card-header">
                                 <h3 data-translate="company-albedo">Albedo - Nouméa (Nouvelle-Calédonie)</h3>
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/albedo.png" alt="Logo Albedo" class="company-logo">
+                                <img src="../images/albedo.png" alt="Logo Albedo" class="company-logo">
                             </div>
                             <div class="experience-content">
                                 <div class="card-body">
@@ -67,7 +67,7 @@
                         <div class="experience-card">
                             <div class="card-header">
                                 <h3 data-translate="company-gka">GKA Kite World Cup - Leucate (France)</h3>
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/gka.png" alt="Logo GKA" class="company-logo">
+                                <img src="../images/gka.png" alt="Logo GKA" class="company-logo">
                             </div>
                             <div class="card-body">
                                 <div class="position">
@@ -94,7 +94,7 @@
                         <div class="experience-card" onclick="window.location.href='projet-allary.html'">
                             <div class="card-header">
                                 <h3 data-translate="company-allary">Chez Allary - Leucate (France)</h3>
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/allary.png" alt="Logo entreprise" class="company-logo">
+                                <img src="../images/allary.png" alt="Logo entreprise" class="company-logo">
                             </div>
                             <div class="card-body">
                                 <div class="position">
@@ -121,7 +121,7 @@
                         <div class="experience-card" onclick="window.location.href='projet-ofada.html'">
                             <div class="card-header">
                                 <h3 data-translate="company-ofada">O'Fada - Toulouse (France)</h3>
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/ofada.png" alt="Logo entreprise" class="company-logo">
+                                <img src="../images/ofada.png" alt="Logo entreprise" class="company-logo">
                             </div>
                             <div class="card-body">
                                 <div class="position">
@@ -148,7 +148,7 @@
                         <div class="experience-card" onclick="window.location.href='projet-poe.html'">
                             <div class="card-header">
                                 <h3 data-translate="company-poe">Hotel de Poé - Bourail (Nouvelle-Calédonie)</h3>
-                                <img src="/Users/utilisateur/Desktop/cursor_ia/images/poe.png" alt="Logo entreprise" class="company-logo">
+                                <img src="../images/poe.png" alt="Logo entreprise" class="company-logo">
                             </div>
                             <div class="card-body">
                                 <div class="position">
