--- a/pages/uqac.html
+++ b/pages/uqac.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div class="language-selector">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images/fr.png" alt="Français" class="language-btn" data-lang="fr">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images/en.png" alt="English" class="language-btn" data-lang="en">
+        <img src="../images/fr.png" alt="Français" class="language-btn" data-lang="fr">
+        <img src="../images/en.png" alt="English" class="language-btn" data-lang="en">
     </div>
 
     <nav>
@@ -50,8 +50,8 @@
                             </ul>
                         </div>
                         <div class="hydraulic-grid">
-                            <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig31.png" alt="Projet thermodynamique 1">
-                            <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig32.png" alt="Projet thermodynamique 2">
+                            <img src="../images/fig31.png" alt="Projet thermodynamique 1">
+                            <img src="../images/fig32.png" alt="Projet thermodynamique 2">
                         </div>
                     </div>
 
@@ -69,8 +69,8 @@
                             </ul>
                         </div>
                         <div class="hydraulic-grid">
-                            <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig29.png" alt="Projet thermodynamique 1">
-                            <img src="/Users/utilisateur/Desktop/cursor_ia/images/fig30.png" alt="Projet thermodynamique 2">
+                            <img src="../images/fig29.png" alt="Projet thermodynamique 1">
+                            <img src="../images/fig30.png" alt="Projet thermodynamique 2">
                         </div>
                     </div>
 
@@ -90,13 +90,13 @@
                         <div class="hydraulic-grid">
                         </div>
                         <div class="project-links">
-                            <a href="/Users/utilisateur/Desktop/cursor_ia/images/D1.pdf" target="_blank" class="pdf-link">
+                            <a href="../images/D1.pdf" target="_blank" class="pdf-link">
                                 <i class="fas fa-file-pdf"></i> Rapport : Audit qualité totale
                             </a>
-                            <a href="/Users/utilisateur/Desktop/cursor_ia/images/D2.pdf" target="_blank" class="pdf-link">
+                            <a href="../images/D2.pdf" target="_blank" class="pdf-link">
                                 <i class="fas fa-file-pdf"></i> Rapport : Carte de contrôle
                             </a>
-                            <a href="/Users/utilisateur/Desktop/cursor_ia/images/D3.pdf" target="_blank" class="pdf-link">
+                            <a href="../images/D3.pdf" target="_blank" class="pdf-link">
                                 <i class="fas fa-file-pdf"></i> Rapport : Normes ISO 9001
                             </a>
                         </div>
