--- a/pages/enseeiht-choix.html
+++ b/pages/enseeiht-choix.html
@@ -11,8 +11,8 @@
 </head>
 <body>
     <div class="language-selector">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images/fr.png" alt="Français" class="language-btn" data-lang="fr">
-        <img src="/Users/utilisateur/Desktop/cursor_ia/images/en.png" alt="English" class="language-btn" data-lang="en">
+        <img src="../images/fr.png" alt="Français" class="language-btn" data-lang="fr">
+        <img src="../images/en.png" alt="English" class="language-btn" data-lang="en">
     </div>
 
     <nav>
