Mise à jour du logo ENSEEIHT avec le nouveau nom de fichier

--- a/pages/formation.html
+++ b/pages/formation.html
@@ -29,7 +29,7 @@
             <h2 data-translate="education-title">Formation</h2>
             
             <div class="education-item" onclick="window.location.href='enseeiht-choix.html'">
-                <img src="../images/logo.png" alt="Logo ENSEEIHT" class="school-logo">
+                <img src="../images/enseeiht-logo.png" alt="Logo ENSEEIHT" class="school-logo">
                 <div class="education-details">
                     <h3 data-translate="enseeiht-location">ENSEEIHT - Toulouse (France)</h3>
                     <p data-translate="engineer-title">Diplôme d'ingénieur en mécanique des fluides, énergetique et environnement</p>
