--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <script src="js/translations.js" defer></script>
     <script src="js/language-switcher.js" defer></script>
+    <meta name="google-site-verification" content="URxJ89iYlIHm7NHMcxmd7DQTOuO8ZFnHRVOOtQbTorc" />
 </head>
 <body>
     <div class="language-selector">
