Mise à jour du site : contenu/structure

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <span class="fluid-text" data-translate="field-of-study">mécanique des fluides</span>
                 </p>
             </div>
-            <img src="images/profil.jpg" alt="Photo de profil" class="profile-img" loading="lazy">
+            <img src="images/profil.jpg" alt="Photo de profil" class="profile-img" loading="eager" decoding="async" fetchpriority="high">
             <div class="quote-container">
                 <blockquote>
                     <p class="quote-text" data-translate="quote-text">"Le succès n'est pas la clé du bonheur. Le bonheur est la clé du succès. Si vous aimez ce que vous faites, vous réussirez."</p>
